# pytest-embedded

./: .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .idf_build_apps.toml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  all_local_packages.txt  conftest.py  foreach.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docs.yml  build_docs.yml  build_tests.yml  check-pre-commit.yml  codeql.yml  pre-commit.yml  pre_commit_check.yml  publish_pypi.yml  python-packages.yml  python_tests.yml  report.yml  sync-jira.yml  sync_jira_issue_comments.yml  sync_jira_new_issue.yml  test-build-docs.yml  test-build-package.yml  test-python.yml
docs/: abbr.md  api.rst  conf.py  expecting.md  fixtures.md  index.md  index.rst  key_concepts.md  requirements.txt  services.md
docs/_static/: theme_overrides.css
docs/_templates/: layout.html
docs/apis/: pytest-embedded-arduino.rst  pytest-embedded-idf.rst  pytest-embedded-jtag.rst  pytest-embedded-nuttx.rst  pytest-embedded-qemu.rst  pytest-embedded-serial-esp.rst  pytest-embedded-serial.rst  pytest-embedded-wokwi.rst  pytest-embedded.rst
docs/concepts/: key-concepts.md  key-concepts.rst  serial.rst  services.md
docs/plugins/: modules.rst  pytest_embedded.rst  pytest_embedded_idf.rst  pytest_embedded_jtag.rst  pytest_embedded_qemu.rst  pytest_embedded_qemu_idf.rst  pytest_embedded_serial.rst  pytest_embedded_serial_esp.rst
docs/references/: pytest_embedded.md  pytest_embedded_arduino.md  pytest_embedded_idf.md  pytest_embedded_jtag.md  pytest_embedded_qemu.md  pytest_embedded_serial.md  pytest_embedded_serial_esp.md
docs/umls/: dependency_tree.puml
docs/usages/: expecting.md  expecting.rst  help_functions.rst  markers.rst  payload_capture.rst  run-on-different-esp-target.rst
examples/: .gitignore
examples/arduino/: README.md
examples/echo/: README.md  conftest.py  pytest.ini  test_echo.py
examples/esp-idf/: README.md  pytest.ini
examples/esp-idf-qemu/: README.md  pytest.ini
examples/esp-idf-qemu/hello_world/: test_hello_world.py
examples/esp-idf/blink/: test_blink.py
examples/esp-idf/hello_world/: test_hello_world.py
examples/nuttx-esp/: README.md  pytest.ini  test_nuttx_esp.py
pytest-embedded/: README.md  pyproject.toml  setup.py
pytest-embedded-arduino/: LICENSE  README.md  pyproject.toml  setup.py
pytest-embedded-arduino/pytest_embedded_arduino/: __init__.py  app.py  serial.py
pytest-embedded-arduino/tests/: test_arduino.py
pytest-embedded-flash-jtag/: README.md  setup.py
pytest-embedded-flash-jtag/tests/: test_flash_jtag.py
pytest-embedded-flash-serial/: setup.py
pytest-embedded-flash-serial/pytest_embedded_flash_serial/: plugin.py
pytest-embedded-flash-serial/tests/: test_flash_serial.py
pytest-embedded-idf/: README.md  pyproject.toml  setup.py
pytest-embedded-idf/pytest_embedded_idf/: __init__.py  _idf.py  app.py  dut.py  idf.py  linux.py  plugin.py  serial.py  unity.py  unity_tester.py  utils.py
pytest-embedded-idf/tests/: test_idf.py
pytest-embedded-jtag/: README.md  pyproject.toml  setup.py
pytest-embedded-jtag/pytest_embedded_jtag/: __init__.py  dut.py  gdb.py  openocd.py  plugin.py
pytest-embedded-jtag/pytest_embedded_jtag/_telnetlib/: LICENSE  telnetlib.py
pytest-embedded-jtag/tests/: test_jtag.py
pytest-embedded-nuttx/: README.md  pyproject.toml
pytest-embedded-nuttx/pytest_embedded_nuttx/: __init__.py  app.py  dut.py  qemu.py  serial.py
pytest-embedded-nuttx/tests/: test_nuttx.py
pytest-embedded-qemu/: CHANGELOG.md  README.md  pyproject.toml  setup.py
pytest-embedded-qemu-idf/: README.md  setup.py
pytest-embedded-qemu-idf/pytest_embedded_qemu_idf/: dut.py  plugin.py  qemu.py
pytest-embedded-qemu-idf/tests/: test_qemu.py
pytest-embedded-qemu/pytest_embedded_qemu/: __init__.py  app.py  dut.py  plugin.py  qemu.py
pytest-embedded-qemu/tests/: test_qemu.py
pytest-embedded-serial/: README.md  pyproject.toml  setup.py
pytest-embedded-serial-esp/: README.md  pyproject.toml  setup.py
pytest-embedded-serial-esp/pytest_embedded_serial_esp/: __init__.py  dut.py  plugin.py  serial.py  serial_esp.py
pytest-embedded-serial-esp/tests/: test_esp.py
pytest-embedded-serial/pytest_embedded_serial/: __init__.py  _serial.py  dut.py  plugin.py  serial.py  serial_dut.py
pytest-embedded-serial/tests/: test_serial.py
pytest-embedded-wokwi/: README.md  pyproject.toml
pytest-embedded-wokwi/pytest_embedded_wokwi/: __init__.py  arduino.py  dut.py  idf.py  wokwi.py  wokwi_cli.py
pytest-embedded-wokwi/tests/: test_wokwi.py
pytest-embedded/pytest_embedded/: __init__.py  app.py  dut.py  dut_factory.py  group.py  log.py  plugin.py  unity.py  utils.py
pytest-embedded/tests/: test_base.py
pytest-idf-base/: README.md  setup.py
pytest-idf-base/pytest_idf_base/: plugin.py
pytest-idf-base/tests/: test_base.py
pytest-idf-flash-jtag/: setup.py
pytest-idf-flash-jtag/pytest_idf_flash_jtag/: plugin.py
pytest-idf-flash-jtag/tests/: conftest.py  test_flash_jtag.py  test_plugin.py
pytest-idf-flash-serial/: README.md  setup.py
pytest-idf-flash-serial/pytest_idf_flash_serial/: plugin.py
pytest-idf-flash-serial/tests/: conftest.py  test_flash_serial.py  test_plugin.py
src/pytest_idf/: plugin.py
src/pytest_idf/printf/: a.py  b.py
src/pytest_idf_flash_jtag/: plugin.py
src/pytest_idf_flash_serial/: plugin.py
tests/: conftest.py  test_pytest_idf.py
tests/fixtures/: gen_esp32part.py
tests/fixtures/hello_world/: sdkconfig
tests/fixtures/hello_world_arduino/: esp32.diagram.json
tests/fixtures/hello_world_esp32/: sdkconfig
tests/fixtures/hello_world_esp32_coredump_flash/: CMakeLists.txt  sdkconfig.defaults
tests/fixtures/hello_world_esp32_coredump_uart/: sdkconfig.defaults
tests/fixtures/hello_world_esp32c3_panic/: sdkconfig.defaults
tests/fixtures/unit_test_app_esp32c3/: CMakeLists.txt
tests/tests_with_extra_plugins/: test_pytest_lazy_fixture.py
(+22 files in other folders)
