[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest-embedded-serial"
authors = [
    {name = "Fu Hanxi", email = "fuhanxi@espressif.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Software Development :: Testing",
]
dynamic = ["version", "description"]
requires-python = ">=3.7"

dependencies = [
    "pytest-embedded~=1.4.2",
    "pyserial~=3.0",
]

[project.urls]
homepage = "https://github.com/espressif/pytest-embedded"
repository = "https://github.com/espressif/pytest-embedded"
documentation = "https://docs.espressif.com/projects/pytest-embedded/en/latest/"
changelog = "https://github.com/espressif/pytest-embedded/blob/main/CHANGELOG.md"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120
target-version = ['py37']
force-exclude = '/tests/'
skip-string-normalization = true

[tool.ruff]
select = [
    'F',  # Pyflakes
    'E',  # pycodestyle
    'W',  # pycodestyle
#    'C90',  # mccabe
#    'I',  # isort
#    'N',  # pep8-naming
#    'D',  # pydocstyle
#    'UP',  #  pyupgrade
#    'YTT',  # flake8-2020
#    'ANN',  # flake8-annotations
#    'S',  # flake8-bandit
#    'BLE',  # flake8-blind-except
#    'FBT',  # flake8-boolean-trap
#    'B',  # flake8-bugbear
#    'A',  # flake8-builtins
#    'COM',  # flake8-commas
#    'C4',  #  flake8-comprehensions
#    'DTZ',  # flake8-datetimez
#    'T10',  # flake8-debugger
#    'DJ',  #  flake8-django
#    'EM',  #  flake8-errmsg
#    'EXE',  # flake8-executable
#    'ISC',  # flake8-implicit-str-concat
#    'ICN',  # flake8-import-conventions
#    'G',  # flake8-logging-format
#    'INP',  # flake8-no-pep420
#    'PIE',  # flake8-pie
#    'T20',  # flake8-print
#    'PYI',  # flake8-pyi
#    'PT',  #  flake8-pytest-style
#    'Q',  # flake8-quotes
#    'RSE',  # flake8-raise
#    'RET',  # flake8-return
#    'SLF',  # flake8-self
#    'SIM',  # flake8-simplify
#    'TID',  # flake8-tidy-imports
#    'TCH',  # flake8-type-checking
#    'ARG',  # flake8-unused-arguments
#    'PTH',  # flake8-use-pathlib
#    'ERA',  # eradicate
#    'PD',  #  pandas-vet
#    'PGH',  # pygrep-hooks
#    'PL',  #  Pylint
#    'TRY',  # tryceratops
#    'NPY',  # NumPy-specific rules
#    'RUF',  # Ruff-specific rules
]
line-length = 120
target-version = "py37"
